--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "pusher/pusher-php-server": "~3.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.5",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
